--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Munch</string>
+    <string name="title_search">Search</string>
+    <string name="title_feed">Feed</string>
+    <string name="title_post">Post</string>
 </resources>
